# teste_o_boticario

./: .env .example  .gitignore  Dockerfile  README.MD  alembic.ini  docker-compose.yml  entrypoint.sh  main.py  makefile  pyproject.toml
src/app/auth/: controller.py  model.py  route.py
src/app/cashback/: controller.py  model.py  route.py
src/app/compra/: controller.py  model.py  route.py
src/app/revendedor/: controller.py  model.py  route.py  validation.py
src/system/alembic/: env.py
src/system/alembic/versions/: 5236f03f81df_init.py
src/system/core/: database.py  logger_core.py  model_core.py  utils_core.py
src/system/integrations/: cashback_api.py
src/test/: test_cashback_api.py  test_compra.py  test_revendedor.py
